Added few comments

--- a/Linked-List.ipynb
+++ b/Linked-List.ipynb
@@ -26,12 +26,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linked List"
+    "# Singly Linked Linked List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,10 +138,9 @@
     "                print(\"Data not Found\")\n",
     "    \n",
     "    def deleteWithPostion(self, position):\n",
+    "        # Deletes a node in the linked list based on its position\n",
     "        if position<0 or position >= self.Length:\n",
     "            print(f\"incorrect input. Please enter a valid input. Max Position is {self.Length-1}\")\n",
-    "        # elif position == self.Length:\n",
-    "        #     self.deleteFromEnd()\n",
     "        elif position == 0:\n",
     "            self.deleteFromBeginning()\n",
     "        else:\n",
@@ -161,6 +160,7 @@
     "                count += 1\n",
     "                \n",
     "    def clearLinkedList(self):\n",
+    "        # Clears the Linked List\n",
     "        self.head = None\n",
     "        self.Length = 0\n",
     "        self.printList()\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
