Added Doubly Linked linked List

--- a/Linked-List.ipynb
+++ b/Linked-List.ipynb
@@ -64,10 +64,10 @@
     "\n",
     "    def insertAtGivenPosition(self, data, position):\n",
     "        # Insert a new node at a given position in the linked list\n",
-    "        if position > self.Length or position < 0:\n",
+    "        if position > self.Length or position < 1:\n",
     "            print(f\"The value cannot be inserted at position {position} as the lenght of the linked list is {self.Length}\")\n",
     "            return None\n",
-    "        if position == 0:\n",
+    "        if position == 1:\n",
     "            self.insertAtBeginning(data)\n",
     "        else:\n",
     "            if position == self.Length:\n",
@@ -123,7 +123,6 @@
     "                if current.data == value:\n",
     "                    if current == self.head:\n",
     "                        self.deleteFromBeginning()\n",
-    "                        self.Length -= 1\n",
     "                        return\n",
     "                    else:\n",
     "                        print(f\"{current.getData()} is deleted.\")\n",
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +269,254 @@
    "source": [
     "new_linked_list.printList()\n",
     "new_linked_list.clearLinkedList()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Doubly Linked Linked-List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoubleNode:\n",
+    "    def __init__(self,data=None,next=None, prev=None):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "    def setData(self,data):\n",
+    "        self.data = data\n",
+    "    def getData(self):\n",
+    "        return self.data\n",
+    "    def setNext(self,next):\n",
+    "        self.next = next\n",
+    "    def getNext(self):\n",
+    "        return self.next\n",
+    "    def hasNext(self):\n",
+    "        return self.next!=None\n",
+    "    def setPrev(self, prev):\n",
+    "        self.prev = prev\n",
+    "    def getPrev(self):\n",
+    "        return self.prev\n",
+    "    def hasPrev(self):\n",
+    "        return self.prev!=None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 752,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoublyLinkedLinkedList(object):\n",
+    "    def __init__(self, DoubleNode=None):\n",
+    "        self.head = DoubleNode\n",
+    "        self.Length = 0\n",
+    "\n",
+    "    def insertAtBeginning(self, data):\n",
+    "        new_node = DoubleNode()\n",
+    "        new_node.setData(data)\n",
+    "        if self.head ==None:\n",
+    "            self.head = new_node\n",
+    "        else:\n",
+    "            new_node.setNext(self.head)\n",
+    "            self.head.setPrev(new_node)\n",
+    "            self.head = new_node\n",
+    "        self.Length += 1\n",
+    "\n",
+    "    def insertAtEnd(self, data):\n",
+    "        new_node = DoubleNode(data=data)\n",
+    "        if self.head == None:\n",
+    "            self.head = new_node\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            while current.getNext() != None:\n",
+    "                # print(current.getData())\n",
+    "                current = current.getNext()\n",
+    "            current.setNext(new_node)\n",
+    "            new_node.setPrev(current)\n",
+    "        self.Length += 1\n",
+    "\n",
+    "    def insertAtGivenPosition(self, data, position):\n",
+    "        if position > self.Length or position <1:\n",
+    "            print(f\"The value cannot be inserted at postion as the lenght of the linked list is {self.Length}\")\n",
+    "            return None\n",
+    "        if position == 1:\n",
+    "            self.insertAtBeginning(data)\n",
+    "        else:\n",
+    "            if position == self.Length:\n",
+    "                self.insertAtEnd(data)\n",
+    "            else:\n",
+    "                new_node = DoubleNode(data)\n",
+    "                current = self.head\n",
+    "                step = 1\n",
+    "                while current!=None and step < position - 1:\n",
+    "                    step +=1\n",
+    "                    current = current.getNext()\n",
+    "                new_node.setNext(current.getNext())\n",
+    "                current.getNext().setPrev(new_node)\n",
+    "                new_node.setPrev(current)\n",
+    "                current.setNext(new_node)\n",
+    "                self.Length += 1\n",
+    "\n",
+    "    def deleteFromBeginning(self):\n",
+    "        if self.Length == 0:\n",
+    "            print(\"The Linked List is empty\")\n",
+    "        else:\n",
+    "            print(f\"{self.head.getData()} is deleted\")\n",
+    "            self.head = self.head.getNext()\n",
+    "            if self.head != None:\n",
+    "                self.head.setPrev(None) \n",
+    "            self.Length -= 1\n",
+    "            print(\"New Linked List is:\")\n",
+    "            self.printlist()\n",
+    "\n",
+    "    def deleteFromEnd(self):\n",
+    "        if self.Length == 0:\n",
+    "            print(\"The Linked List is empty\")\n",
+    "        elif self.Length == 1:\n",
+    "            self.deleteFromBeginning()\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            previous = self.head\n",
+    "            while current.getNext()!=None:\n",
+    "                previous = current\n",
+    "                current = current.getNext()\n",
+    "            print(f\"{current.getData()} is deleted\")\n",
+    "            previous.setNext(None)\n",
+    "            self.Length -= 1\n",
+    "            print(\"New Linked List is:\")\n",
+    "            self.printlist()\n",
+    "        \n",
+    "    def deleteWithValue(self,value):\n",
+    "        if self.Length == 0:\n",
+    "            print(\"The Linked List is empty\")\n",
+    "        else:\n",
+    "            previous = self.head\n",
+    "            current = self.head\n",
+    "            while current != None:\n",
+    "                if current.data == value:\n",
+    "                    if current == self.head:\n",
+    "                        self.deleteFromBeginning()\n",
+    "                        return \n",
+    "                    else:\n",
+    "                        print(f\"{current.getData()} is deleted.\")\n",
+    "                        previous.setNext(current.getNext())\n",
+    "                        if current.hasNext():\n",
+    "                            current.getNext().setPrev(previous)\n",
+    "                        self.Length -=1\n",
+    "                        self.printlist()\n",
+    "                        return\n",
+    "                else:\n",
+    "                    previous = current\n",
+    "                    current = current.getNext()\n",
+    "            else:\n",
+    "                print(\"Data not found\")\n",
+    "    def deleteWithPostion(self,position):\n",
+    "        if self.Length == 0:\n",
+    "            print(\"The Linked List is empty\")\n",
+    "        if position<0 or position >self.Length:\n",
+    "            print(f\"incrrect input. Please enter valid input. Max Position is {self.Length}\")\n",
+    "        elif position == 1:\n",
+    "            self.deleteFromBeginning()\n",
+    "        elif position == self.Length:\n",
+    "            self.deleteFromEnd()\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            previous = self.head\n",
+    "            count = 1\n",
+    "            while current!=None and count < position:\n",
+    "                previous = current\n",
+    "                current = current.getNext()\n",
+    "                count += 1\n",
+    "            previous.setNext(current.getNext())\n",
+    "            current.getNext().setPrev(previous)\n",
+    "            self.Length -= 1\n",
+    "            self.printlist()\n",
+    "            return\n",
+    "\n",
+    "    def printlist(self):\n",
+    "        current = self.head\n",
+    "        while current is not None:\n",
+    "            prev_data = current.getPrev().getData() if current.getPrev() else None\n",
+    "            next_data = current.getNext().getData() if current.getNext() else None\n",
+    "            print(f\"Data: {current.getData()}, Prev: {prev_data}, Next: {next_data}\")\n",
+    "            current = current.getNext()\n",
+    "        print(\"None\")\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 753,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_double_linked_list = DoublyLinkedLinkedList()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 754,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: 45, Prev: None, Next: 50\n",
+      "Data: 50, Prev: 45, Next: 30\n",
+      "Data: 30, Prev: 50, Next: 25\n",
+      "Data: 25, Prev: 30, Next: None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_double_linked_list.insertAtBeginning(50)\n",
+    "new_double_linked_list.insertAtEnd(30)\n",
+    "new_double_linked_list.insertAtGivenPosition(25,2)\n",
+    "new_double_linked_list.insertAtBeginning(45)\n",
+    "new_double_linked_list.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 755,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45 is deleted\n",
+      "New Linked List is:\n",
+      "Data: 50, Prev: None, Next: 30\n",
+      "Data: 30, Prev: 50, Next: 25\n",
+      "Data: 25, Prev: 30, Next: None\n",
+      "None\n",
+      "25 is deleted\n",
+      "New Linked List is:\n",
+      "Data: 50, Prev: None, Next: 30\n",
+      "Data: 30, Prev: 50, Next: None\n",
+      "None\n",
+      "incrrect input. Please enter valid input. Max Position is 2\n",
+      "30 is deleted.\n",
+      "Data: 50, Prev: None, Next: None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_double_linked_list.deleteFromBeginning()\n",
+    "new_double_linked_list.deleteFromEnd()\n",
+    "new_double_linked_list.deleteWithPostion(3)\n",
+    "new_double_linked_list.deleteWithValue(30)"
    ]
   },
   {
