--- a/Linked-List.ipynb
+++ b/Linked-List.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 761,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,12 +448,17 @@
     "            print(f\"Data: {current.getData()}, Prev: {prev_data}, Next: {next_data}\")\n",
     "            current = current.getNext()\n",
     "        print(\"None\")\n",
+    "\n",
+    "    def clearlist(self):\n",
+    "        self.head = None\n",
+    "        self.Length = 0\n",
+    "        self.printlist()\n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 762,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,8 +466,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insertion"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 763,
    "metadata": {},
    "outputs": [
     {
@@ -486,8 +498,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deletion"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 764,
    "metadata": {},
    "outputs": [
     {
@@ -520,11 +539,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Miscellaneous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 765,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: 50, Prev: None, Next: None\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_double_linked_list.printlist()\n",
+    "new_double_linked_list.clearlist()"
+   ]
   },
   {
    "cell_type": "code",
