Added Circular Linked List

--- a/Linked-List.ipynb
+++ b/Linked-List.ipynb
@@ -566,6 +566,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Circular Linked List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 794,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NodeCircular:\n",
+    "    def __init__(self,data=None,next=None):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "    def getData(self):\n",
+    "        return self.data\n",
+    "    def setData(self, data):\n",
+    "        self.data = data\n",
+    "    def setNext(self, next):\n",
+    "        self.next = next\n",
+    "    def getNext(self):\n",
+    "        return self.next\n",
+    "    def hasNext(self):\n",
+    "        return self.next!=None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CircularLinkedList(object):\n",
+    "    def __init__(self, circular_node=None):\n",
+    "        self.head = circular_node\n",
+    "    \n",
+    "    def countList(self):\n",
+    "        current = self.head\n",
+    "        if current == None:\n",
+    "            return 0\n",
+    "        count = 1\n",
+    "        while current.getNext() != self.head:\n",
+    "            current = current.getNext()\n",
+    "            count += 1\n",
+    "        return count\n",
+    "            \n",
+    "\n",
+    "    def insertAtBeginning(self, data):\n",
+    "        current = self.head\n",
+    "        new_node = NodeCircular(data)\n",
+    "        new_node.setNext(new_node)\n",
+    "        \n",
+    "        if self.head == None:\n",
+    "            self.head = new_node\n",
+    "        else:\n",
+    "            while current.getNext() != self.head:\n",
+    "                current = current.getNext()\n",
+    "            new_node.setNext(self.head)\n",
+    "            self.head = new_node\n",
+    "            current.next = self.head\n",
+    "\n",
+    "    def insertAtEnd(self,data):\n",
+    "        current = self.head\n",
+    "        new_node = NodeCircular(data)\n",
+    "        new_node.setNext(new_node)\n",
+    "\n",
+    "        if self.head == None:\n",
+    "            self.head = new_node\n",
+    "        else:\n",
+    "            while current.getNext() != self.head:\n",
+    "                current = current.getNext()\n",
+    "            current.setNext(new_node)\n",
+    "            new_node.setNext(self.head)\n",
+    "\n",
+    "    def deleteAtEnd(self):\n",
+    "        prev = self.head\n",
+    "        current = self.head\n",
+    "        if current == None:\n",
+    "            return \"Empty List\"\n",
+    "\n",
+    "        while current.getNext() != self.head:\n",
+    "            prev = current\n",
+    "            current = current.getNext()\n",
+    "        if current == self.head:\n",
+    "            print(f\"{self.head.getData()} is deleted.\")\n",
+    "            self.head = None\n",
+    "            print(\"Final element deleted\")\n",
+    "        else:\n",
+    "            print(f\"{current.getData()} is deleted.\")\n",
+    "            prev.setNext(current.getNext())\n",
+    "\n",
+    "    def deleteAtBeginning(self):\n",
+    "        current = self.head\n",
+    "        if current == None:\n",
+    "            return \"Empty List\"\n",
+    "        while current.getNext()!=self.head:\n",
+    "            current = current.getNext()\n",
+    "        if current == self.head:\n",
+    "            print(f\"{self.head.getData()} is deleted.\")\n",
+    "            self.head = None\n",
+    "            print(\"Final Element deleted\")\n",
+    "        else:\n",
+    "            current.setNext(self.head.getNext())\n",
+    "            print(f\"{self.head.getData()} is deleted.\")\n",
+    "            self.head = current.getNext()\n",
+    "\n",
+    "    def printList(self):\n",
+    "        # Print all the nodes in the linked list\n",
+    "        current = self.head\n",
+    "        if current == None:\n",
+    "            print(\"Empty List\")\n",
+    "            return\n",
+    "        next_data = current.getNext().getData()\n",
+    "        print(f\"Data: {current.getData()}, Next: {next_data}\")\n",
+    "        while current.next != self.head:\n",
+    "            current = current.getNext()\n",
+    "            next_data = current.getNext().getData()\n",
+    "            print(f\"Data: {current.getData()}, Next: {next_data}\")\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_circular_linked_list = CircularLinkedList()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insertion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: 45, Next: 50\n",
+      "Data: 50, Next: 30\n",
+      "Data: 30, Next: 25\n",
+      "Data: 25, Next: 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_circular_linked_list.insertAtBeginning(50)\n",
+    "new_circular_linked_list.insertAtEnd(30)\n",
+    "new_circular_linked_list.insertAtEnd(25)\n",
+    "new_circular_linked_list.insertAtBeginning(45)\n",
+    "new_circular_linked_list.printList()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deletion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45 is deleted.\n",
+      "25 is deleted.\n",
+      "Data: 50, Next: 30\n",
+      "Data: 30, Next: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_circular_linked_list.deleteAtBeginning()\n",
+    "new_circular_linked_list.deleteAtEnd()\n",
+    "new_circular_linked_list.printList()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Miscellaneous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_circular_linked_list.countList()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
